# drf-project-base

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  run.sh
apps/: urls.py
apps/base/: middleware.py  mixins.py  models.py  serializers.py  utils.py  views.py
apps/configs/: serializer.py  views.py
apps/djk_users/: apps.py  forms.py  urls.py  views.py
apps/djk_users/jinja2/: base.htm  mainmenu.htm  upmainmenu.htm
apps/users/: admin.py  models.py  serializers.py  tests.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_customuser_username.py
djk_ui/jinja2/: base_min.htm
requirements/: requirements.txt
settings/: asgi.py  base.py  init.py  production.py  staging.py  wsgi.py
