[tool.poetry]
name = "drf-project-base"
version = "0.1.0"
description = "BASE - API REST with Django and DRF"
authors = ["Christian Gerardo Garcia Serrato <christiangerardogs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.2,<5.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
django-environ = "^0.4.5"
python-dotenv = "^0.13.0"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = "^4.2.0"
drf-extra-fields = "^3.7.0"
django-filter = "^23.3"
django-jinja-knockout = "^2.2.1"
djk-bootstrap5 = "^2.2.1"
django-allauth = "^0.60.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
